WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309087
AX: Accessibility layout tests can dirty style at invalid times via JS notification handlers, causing incorrect behavior and asserts
https://bugs.webkit.org/show_bug.cgi?id=309087
Summary
AX: Accessibility layout tests can dirty style at invalid times via JS notifi...
Tyler Wilcock
Reported
2026-03-03 11:14:13 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-03 11:14:19 PST
<
rdar://problem/171643206
>
Tyler Wilcock
Comment 2
2026-03-03 11:18:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59814
EWS
Comment 3
2026-03-03 20:11:44 PST
Committed
308603@main
(294e3d8df2e6): <
https://commits.webkit.org/308603@main
> Reviewed commits have been landed. Closing PR #59814 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug