AX: Accessibility layout tests can dirty style at invalid times via JS notification handlers, causing incorrect behavior and asserts https://bugs.webkit.org/show_bug.cgi?id=309087 rdar://171643206

Reviewed by Joshua Hoffman.

accessibility/focus-in-remote-frame.html was marked as Skip because it occasionally dirtied style in the middle
contexts that expected clean style (namely AXObjectCache::performDeferredCacheUpdate). Fix this by reposting
focused-change notifications to layout tests asynchronously, allowing performDeferredCacheUpdate to complete
without dirtying style in the middle.

Also make accessibility/focus-in-remote-frame.html less likely to trigger this issue by forcing clean style and layout
immediately after dirtying it.

* LayoutTests/http/tests/site-isolation/accessibility/focus-in-remote-frame.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::platformHandleFocusedUIElementChanged):

Canonical link: https://commits.webkit.org/308603@main